--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </noscript>
     <!-- built files will be auto injected -->
     <div id="root"></div>
-    <script src="dist/main.js"></script>
+    <!-- <script src="dist/main.js"></script> -->
   </body>
 </html>
